# abt

./: .gitignore  BT.py  Car_BT.xml  README.md  parse.py  parsing_NL.py  parsing_NL_031223.py  parsing_NL_cli.py  parsing_with_counter.py  parsing_works_1.py  parsing_works_2.py
Gazebo Models/: moving_robot1.sdf  moving_robot2.sdf  moving_robot3.sdf
NuSMV_Encoding/: NuSMV_Encoding.smv  nusmv_encoding.py
NuSMV_Encoding/example_trees/: robot_game1.xml  robot_game2.xml  tree1.xml  tree2.xml
Task_1_update/dev_ws/install/: local_setup.sh  setup.sh
Task_1_update/dev_ws/install/my_package/lib/my_package/: moveTurtle
Task_1_update/dev_ws/install/my_package/share/my_package/: package.sh  package.xml
Task_1_update/dev_ws/log/: latest_build
Task_1_update/dev_ws/src/install/: local_setup.sh
Task_1_update/dev_ws/src/log/: latest_build
Task_1_update/dev_ws/src/my_package/: setup.py
Task_1_update/dev_ws/src/my_package/my_package/: advanced_turtle.py
automation/: encoding_automation.py  tree2.xml
automation_final/: car.xml  encoding_automation_fail&success.py  robot.xml
behaviortree_cpp/behavior_tree/: CMakeLists.txt  b_tree.xml  behavior_tree.cpp
dev_ws/install/: local_setup.sh  setup.sh
dev_ws/install/my_package/share/my_package/: package.sh
dev_ws/log/: latest_build
dev_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dev_ws/src/install/my_package/share/my_package/: package.sh
dev_ws/src/log/: latest_build
dev_ws/src/my_package/: setup.py
dev_ws/src/my_package/my_package/: coordinates.py
dev_ws/src/my_package/my_package.egg-info/: SOURCES.txt
gazebo/: Environment_1.sdf  Environment_2.sdf  basic_robot.sdf  sensor_bot.sdf
parsing_behavior_trees/: parse_bt.py  simple_bt.py
parsing_in_natural_language/: output.txt  parsing.py
parsing_week3/: parsing_tree.py  readme.md
ros2_cpp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros2_cpp/install/ros2_cpp_pkg/Lib/ros2_cpp_pkg/: cpp_code
ros2_cpp/install/ros2_cpp_pkg/lib/ros2_cpp_pkg/: draw_circle  ros2_cpp_code
ros2_cpp/install/ros2_cpp_pkg/share/ament_index/resource_index/package_run_dependencies/: ros2_cpp_pkg
ros2_cpp/install/ros2_cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: ros2_cpp_pkg
ros2_cpp/install/ros2_cpp_pkg/share/ros2_cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_cpp/install/ros2_cpp_pkg/share/ros2_cpp_pkg/cmake/: ros2_cpp_pkgConfig-version.cmake  ros2_cpp_pkgConfig.cmake
ros2_cpp/install/ros2_cpp_pkg/share/ros2_cpp_pkg/environment/: ament_prefix_path.dsv  path.dsv
ros2_cpp/log/: latest_build  latest_list
ros2_cpp/src/ros2_cpp_pkg/: CMakeLists.txt  package.xml
ros2_cpp/src/ros2_cpp_pkg/src/: behavior_tree.cpp  bt_gazebo1.cpp  ros2_cpp_code.cpp
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/my_robot_controller/lib/my_robot_controller/: advanced_turtle  advanced_turtle2  advanced_turtle3  automate_turtle  complex_turtle  controller  pose_subscriber = my_robot_controller.pose_subscriber:maincontroller  pose_subscriber = my_robot_controller.pose_subscriber:maincontroller1
ros2_ws/install/my_robot_controller/share/my_robot_controller/: package.sh  package.xml
ros2_ws/install/py_trees_ros/share/py_trees_ros/: package.sh
ros2_ws/install/turtle_automate/lib/turtle_automate/: control_node
ros2_ws/install/turtle_automate/share/turtle_automate/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build  latest_list  latest_test
ros2_ws/src/install/: local_setup.sh  setup.sh  setup.zsh
ros2_ws/src/install/my_robot_controller/share/my_robot_controller/: package.sh
ros2_ws/src/log/: latest_build
ros2_ws/src/my_behavior_tree/: CMakeLists.txt  package.xml
ros2_ws/src/my_behavior_tree/behavior_trees/: my_behavior_tree.xml
ros2_ws/src/my_behavior_tree/src/: my_behavior_tree.cpp
ros2_ws/src/my_car_controller/: CMakeLists.txt  package.xml
ros2_ws/src/my_car_controller/behavior_trees/: 1.xml  bt_gazebo3.xml  bt_gazebo4.xml  bt_main.xml  bt_sub.xml  models.xml  my_car_behavior.xml
ros2_ws/src/my_car_controller/src/: my_car_behavior.xml  my_car_controller.cpp
ros2_ws/src/my_robot_controller/: package.xml  setup.py
ros2_ws/src/my_robot_controller/my_robot_controller/: advanced_turtle.py  advanced_turtle1.py  advanced_turtle2.py  advanced_turtle3.py  automate_turtle.py  controller.py  draw_circle.py  moveTurtle.py  pose_subscriber.py  pytrees.py  turtle_publisher.py  turtle_subscriber.py
ros2_ws/src/my_robot_controller/my_robot_controller/install/: local_setup.sh  setup.sh
ros2_ws/src/my_robot_controller/my_robot_controller/log/: latest_build
ros2_ws/src/my_turtle_controller/: CMakeLists.txt  package.xml
ros2_ws/src/my_turtle_controller/behavior_trees/: my_turtle_behavior.xml
ros2_ws/src/my_turtle_controller/src/: my_turtle_behavior.cpp
ros2_ws/src/turtle_automate/: package.xml  setup.cfg  setup.py
ros2_ws/src/turtle_automate/turtle_automate/: control_node.py
ros2_ws/src/turtle_circle/: package.xml  setup.py
ros2_ws/src/turtle_circle/turtle_circle/: draw_circle.py  pose_subscriber.py
testcases/: NuSMV_Encoding1.smv  NuSMV_Encoding2.smv  robot_game1.xml  robot_game2.xml
